--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,3 +36,8 @@
   </div>
 
 </footer>
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/vendor/what-input.js"></script>
+<script src="js/vendor/foundation.js"></script>
+<script src="js/app.js"></script>
