--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,23 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  
+  
+  <meta name="keywords" content="Design,Architecture,Branding,3D,2D,Art,making,building,portfolio,personal,site">
+  <meta name="author" content="Yasmeen Almuhanna">
+  <link rel="icon" type="image/png" href="../img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="76x76"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="120x120"/>
+  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="152x152"/>
+  
+  <meta property="og:title" content="{% if page.title %}{{ site.title | escape }} | {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
+  <meta property="og:image" content="{{ page.thumbnail | prepend: '/img/thumbnails/' | prepend: site.baseurl | prepend: site.url }}" />
 
+  <link rel="stylesheet" href="{{" /css/foundation.css" | prepend: site.baseurl }}"/>
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/yazzy.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 </head>
