Clean Up + Build

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -34,6 +34,8 @@ body {
   font-weight: $roboto-regular;
   font-size: 20px; //1em
   color: $yazzy-black;
+  background-color: $yazzy-black;
+  color: $pure-white;
 }
 
 h1,
