--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
-<footer class="site-footer">
-
+<footer class="grid-x">
+  <div class="cell small-12 medium-6">© Yasmeen Almuhanna</div>
+  <div class="signature cell small-12 medium-6">written with love thing</div>
 </footer>
 
 <script src="js/vendor/jquery.js"></script>
