Hero Section Added

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,2 +1,7 @@
 <section class="hero">
+  <p class="hello">HELLO</p>
+  <div class="overlay grid-x">
+    <p class="yasmeen cell small-6">I'M YASMEEN</p>
+    <p class="todo cell small-6">I craft experiences, visualize ideas, and develop business strategies based on research data and principles of design.</p>
+  </div>
 </section>
