Tile Styling Update

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -119,15 +119,21 @@ header{
   .tile{
     padding: 1em;
     color: $pure-white;
+    position: relative;
     .tile-title{
       font-family: $oswald;
       font-size: 1.3em;
       font-weight: $oswald-medium;
       text-transform: uppercase;
+      position: absolute;
+      right: 1em;
+      left: 1em;
+      line-height: 1.3em;
     }
     .tile-image{
+      position: relative;
       padding: 1em;
-      margin-top: 0.7em;
+      margin-top: 3em;
       margin-bottom: 0.7em;
       opacity: 0.5;
     }
