--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -167,6 +167,9 @@ footer{
   padding-bottom: 2em;
   .signature{
     text-align: right;
+    .rehan-logo{
+      height: 18px;
+    }
   }
 }
 //******* End of Footer Styling
