--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,16 @@
 <footer class="grid-x">
   <div class="cell small-12 medium-6">© Yasmeen Almuhanna</div>
-  <div class="signature cell small-12 medium-6">written with love thing</div>
+  <div class="signature cell small-12 medium-6">
+  <span class="fa-stack fa-1x">
+    <i class="fa fa-pencil fa-stack-1x"></i>
+  </span>
+  with
+  <span class="fa-stack fa-1x">
+    <i class="fa fa-heart fa-stack-1x"></i>
+  </span>
+  by &nbsp;
+  <a target="_blank" href="http://rehanbutt.com"><img class="rehan-logo" src="{{"/img/rehanLogo.svg" | prepend: site.baseurl }}"></a>
+  </div>
 </footer>
 
 <script src="js/vendor/jquery.js"></script>
