--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,26 +1,43 @@
 ---
-layout: default
+layout:
 ---
-<article class="project-container" itemscope itemtype="http://schema.org/BlogPosting">
-
-  {% assign blocks = page.content | split: "!~META" %}
-  <header class="project-header grid-x">
-    <div class="project-words cell small-12 medium-6">
-      <h1 class="project-title" itemprop="name headline" style="border-bottom-color: #{{page.color}};">{{ page.title }}</h1>
-      <p class="project-time">
-      <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date| date: "%B %Y" }}</time>
-      </p>
-      <p>
-        {{ blocks[0] }}
-      </p>
+<html>
+    {% include head.html %}
+  <body>
+    
+    <div class="grid-container">
+      {% include header.html %}
     </div>
-    <div class="cell small-12 medium-6">
-      <img src="/img/{{page.title | downcase | remove: " "}}/hero.png">
+    
+    <article class="project-container" itemscope itemtype="http://schema.org/BlogPosting">
+
+      {% assign blocks = page.content | split: "!~META" %}
+      <header class="project-header grid-container grid-x">
+        <div class="project-words cell small-12 medium-6">
+          <h1 class="project-title" itemprop="name headline" style="border-bottom-color: #{{page.color}};">{{ page.title }}</h1>
+          <p class="project-time">
+          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date| date: "%B %Y" }}</time>
+          </p>
+          <p>
+            {{ blocks[0] }}
+          </p>
+        </div>
+        <div class="cell small-12 medium-6">
+          <img src="/img/{{page.title | downcase | remove: " "}}/hero.png">
+        </div>
+      </header>
+
+      <div class="project-content" itemprop="articleBody">
+        <div class="grid-container">
+        {{ blocks[1] }}
+        </div>
+      </div>
+
+    </article>
+    
+    <div class="grid-container">
+      {% include footer.html %}
     </div>
-  </header>
-
-  <div class="project-content" itemprop="articleBody">
-    {{ blocks[1] }}
-  </div>
-
-</article>
+    
+  </body>
+</html>
