--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -181,6 +181,7 @@ header{
     .project-title{
       font-family: $oswald;
       font-weight: $oswald-semibold;
+      color: $pure-white;
       text-transform: uppercase;
       font-size: 5em;
       line-height: 1em;
