--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -218,7 +218,7 @@ header{
       text-transform: uppercase;
     }
     .row-item{
-      margin-bottom: 3em;
+//      margin-bottom: 3em;
       padding: 2em;
     }
     .text-item{
@@ -230,6 +230,9 @@ header{
       font-style: italic;
       color: $yazzy-light-grey;
       padding-top: 0.5em;
+    }
+    .body-copy{
+      margin-bottom: 2em;
     }
   }
 }
