--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -163,6 +163,7 @@ header{
 //******* Project Page Styling
 .project-container{
   .project-header{
+    padding-bottom: 3em;
     .project-words{
       padding-right: 4em;
       .project-time{
