--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -149,7 +149,7 @@ header{
         padding: 1em;
         margin-top: 3em;
         margin-bottom: 0.7em;
-        opacity: 0.5;
+        //opacity: 0.5;
       }
       .tile-category{
         font-family: $roboto;
