--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -179,6 +179,9 @@ header{
     padding-bottom: 3em;
     .project-words{
       padding-right: 4em;
+      @media screen and (max-width: 40em) {
+        padding-right: 0;
+      }
       .project-time{
         font-family: $roboto;
         color: $yazzy-light-grey;
@@ -210,6 +213,10 @@ header{
     color: $yazzy-black;
     padding-top: 4em;
     padding-bottom: 4em;
+    @media screen and (max-width: 40em) {
+      padding-top: 1em;
+      padding-bottom: 1em;
+    }
     .section-header{
       margin-bottom: 5em;
     }
@@ -225,6 +232,9 @@ header{
       font-weight: $oswald-medium;
       text-transform: uppercase;
       margin-top: -3em;
+      @media screen and (max-width: 40em) {
+        font-size: 2em;
+      }
     }
     h3{
       font-family: $oswald;
@@ -233,10 +243,18 @@ header{
     }
     .row-item{
       padding: 2em;
+      @media screen and (max-width: 40em) {
+        margin-bottom: 1em;
+      }
     }
     .text-item{
       padding-left: 2em;
       padding-right: 2em;
+      @media screen and (max-width: 40em) {
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 1em;
+      }
     }
     .caption{
       font-weight: $roboto-regular;
