--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -1,6 +1,6 @@
---- 
-  # Front matter comment to ensure Jekyll properly reads file. 
---- 
+---
+  # Front matter comment to ensure Jekyll properly reads file.
+---
 
 //******* Variables
 
@@ -73,7 +73,7 @@ header{
       padding-right: 0.5em;
       padding-top: .3em;
       padding-bottom: .3em;
-      
+
       &:visited{
         color: $pure-white;
       }
@@ -103,21 +103,23 @@ header{
       font-size: 8em;
     }
   }
-  
+
   .overlay{
     margin-top: -6em;
     @media screen and (max-width: 40em) {
       margin-top: -4em;
     }
   }
-  
+
   .yasmeen{
+    color: $pure-white;
     font-size: 3em;
     font-family: $oswald;
     line-height: 1em;
   }
-  
+
   .todo{
+    color: $pure-white;
     font-size: 1.4em;
     line-height: 1.3em;
     font-family: $roboto-condensed;
@@ -301,5 +303,5 @@ footer{
 
 //Tablet Styling
 @media screen and (max-width: 64em) {
-  
+
 }
