Footer Buffer Unique Page Styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,14 @@
       {{ content }}
     </div>
 
-    {% include footer-buffer.html %}
-    
+    {% if page.url == '/' %}
+      <div class="footer-buffer-home">
+        {% include footer-buffer.html %}
+      </div>
+    {% else %}
+      {% include footer-buffer.html %}
+    {% endif %}
+
     <div class="grid-container">
       {% include footer.html %}
     </div>
