--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -349,6 +349,12 @@ header{
     }
   }
 }
+.footer-buffer-home{
+  .footer-buffer{
+    color: $pure-white;
+    background-color: $yazzy-black;
+  }
+}
 //******* End of Footer Buffer Page Styling
 
 
