Footer Page Specific Styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,13 @@
     {% endif %}
 
 
-    {% include footer.html %}
+    {% if page.url == '/' %}
+      <div class="footer-home">
+        {% include footer.html %}
+      </div>
+    {% else %}
+      {% include footer.html %}
+    {% endif %}
 
 
   </body>
