--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="grid-x">
     <div class="cell small-12 medium-4 copyright">© Yasmeen Almuhanna</div>
     <div class="cell small-12 medium-4 logo">
-      <img src="img/yalogo.svg" alt="Yasmeen's Logo">
+      <img src="{{"/img/yalogo.svg" | prepend: site.baseurl }}" alt="Yasmeen's Logo">
     </div>
     <div class="cell small-12 medium-4 signature">
       <span class="fa-stack fa-1x">
@@ -17,6 +17,9 @@
       <a target="_blank" href="http://rehanbutt.com"><img class="rehan-logo" src="{{"/img/rehanLogo.svg" | prepend: site.baseurl }}"></a>
     </div>
   </div>
+  </div>
+  <div class="easter-egg">
+    <img src="{{"/img/easter-egg.svg" | prepend: site.baseurl }}" alt="Easter Egg">
   </div>
 </footer>
 
