Easter egg Home Only

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -392,23 +392,26 @@ footer{
     }
   }
   .easter-egg{
-    position: absolute;
-    right: 15em;
-    bottom: -35em;
-    width: 5em;
-    transform: rotate(-35deg);
-    animation-name: wave-animation;/* Refers to the name of your @keyframes element below */
-    animation-duration: 5.5s;/* Change to speed up or slow down */
-    animation-iteration-count: infinite;/* Never stop waving :) */
-    transform-origin: 50% 80%;/* Pivot around the bottom-left palm */
-    display: inline-block;
-    animation-delay: 3s;
+    display: none;
   }
 }
 
 .footer-home{
   footer{
     background-color: $yazzy-grey;
+    .easter-egg{
+      position: absolute;
+      right: 15em;
+      bottom: -35em;
+      width: 5em;
+      transform: rotate(-35deg);
+      animation-name: wave-animation;/* Refers to the name of your @keyframes element below */
+      animation-duration: 5.5s;/* Change to speed up or slow down */
+      animation-iteration-count: infinite;/* Never stop waving :) */
+      transform-origin: 50% 80%;/* Pivot around the bottom-left palm */
+      display: inline-block;
+      animation-delay: 3s;
+    }
   }
 }
 //******* End of Footer Styling
