--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -163,12 +163,15 @@ header{
         position: relative;
         padding: 1em;
         margin-top: 3em;
-        margin-bottom: 0.7em;
+        margin-bottom: 2.7em;
         //opacity: 0.5;
       }
       .tile-category{
         font-family: $roboto;
         color: $pure-white;
+        position: absolute;
+        left: 1em;
+        bottom: 1em;
       }
     }
   }
