--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,6 +16,7 @@ layout:
         <div class="project-words cell small-12 medium-6">
           <h1 class="project-title" itemprop="name headline" style="border-bottom-color: #{{page.color}};">{{ page.title }}</h1>
           <p class="project-time">
+          <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date| date: "%B %Y" }}</time>
           </p>
           <p>
             {{ blocks[0] }}
