--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,28 +1,33 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{{ site.title | escape }} | {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  
-  
-  <meta name="keywords" content="Design,Architecture,Branding,3D,2D,Art,making,building,portfolio,personal,site">
-  <meta name="author" content="Yasmeen Almuhanna">
-  <link rel="icon" type="image/png" href="../img/favicon.png"/>
-  <link rel="shortcut icon" type="image/png" href="../img/favicon.png"/>
-  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png"/>
-  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="76x76"/>
-  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="120x120"/>
-  <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="152x152"/>
-  
-  <meta property="og:title" content="{% if page.title %}{{ site.title | escape }} | {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
-  <meta property="og:image" content="{{ page.thumbnail | prepend: '/img/thumbnails/' | prepend: site.baseurl | prepend: site.url }}" />
+    <title>{% if page.title %}{{ site.title | escape }} |
+        {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
+    <meta name="description"
+        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{" /css/foundation.css" | prepend: site.baseurl }}"/>
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="{{ "/css/yazzy.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+    <meta name="keywords" content="Design,Architecture,Branding,3D,2D,Art,making,building,portfolio,personal,site">
+    <meta name="author" content="Yasmeen Almuhanna">
+    <link rel="icon" type="image/png" href="../img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+    <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" />
+    <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="76x76" />
+    <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="120x120" />
+    <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="152x152" />
+
+    <meta property="og:title"
+        content="{% if page.title %}{{ site.title | escape }} | {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
+    <meta property="og:image"
+        content="{{ page.thumbnail | prepend: '/img/thumbnails/' | prepend: site.baseurl | prepend: site.url }}" />
+
+    <link rel="stylesheet" href="{{" /css/foundation.css" | prepend: site.baseurl }}" />
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ "/css/yazzy.css" | prepend: site.baseurl }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
+        href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 </head>
