--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -73,6 +73,7 @@ header{
       padding-right: 0.5em;
       padding-top: .3em;
       padding-bottom: .3em;
+      color: inherit;
 
       &:visited{
         color: $pure-white;
