--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -27,7 +27,7 @@ layout:
                 </p>
             </div>
             <div class="cell small-12 medium-6 hero-img">
-                <img src="/img/{{page.title | downcase | remove: " "}}/hero.png">
+                <img src="/img/{{page.title | downcase | remove: "</br>" | remove: " "}}/hero.png">
             </div>
         </header>
 
