--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -27,7 +27,16 @@ layout:
                 </p>
             </div>
             <div class="cell small-12 medium-6 hero-img">
+                {% if page.title == 'Tactile Flux' %}
+                <div style="position: relative;">
+                    <img src="/img/{{page.title | downcase | remove: "</br>" | remove: " "}}/hero.png">
+                    <a href="/img/tactileflux/presentationBoard.pdf" target="_blank"><img id="enlarge-icon-img"
+                            class="enlarge-icon" src="/img/tactileflux/enlargeIcon.svg">
+                    </a>
+                </div>
+                {% else %}
                 <img src="/img/{{page.title | downcase | remove: "</br>" | remove: " "}}/hero.png">
+                {% endif %}
             </div>
         </header>
 
