favicon & work link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 
     <nav class="cell small-6">
         <a href="/about">ABOUT</a>
-        <a href="#">MY WORK</a>
+        <a href="/">MY WORK</a>
     </nav>
 
 </header>
