--- a/_includes/footer-buffer.html
+++ b/_includes/footer-buffer.html
@@ -7,7 +7,10 @@
         <p>Want to work on a project together or simply say hi?</p>
         <a href="mailto:yasmeenalmuhanna@gmail.com?subject=Hi Yasmeen!">yasmeenalmuhanna@gmail.com</a>
     </div>
-    <div class="easter-egg">
-        <img src="{{"/img/easter-egg.svg" | prepend: site.baseurl }}" alt="Easter Egg">
+    <div class="easter-egg-grass">
+        <img src="{{"/img/easter-grass.svg" | prepend: site.baseurl }}" alt="Easter Egg">
+        <div class="easter-egg">
+            <img src="{{"/img/easter-egg.svg" | prepend: site.baseurl }}" alt="Easter Egg">
+        </div>
     </div>
 </div>
