Logo & project titles

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="Design,Architecture,Branding,3D,2D,Art,making,building,portfolio,personal,site">
     <meta name="author" content="Yasmeen Almuhanna">
     <link rel="icon" type="image/png" href="../img/favicon.png" />
-    <link rel="shortcut icon" type="image/png" href="../img/yalogo.svg" />
+    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
     <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" />
     <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="76x76" />
     <link rel="apple-touch-icon" type="image/png" href="../img/favicon.png" sizes="120x120" />
