--- a/css/projects/bishopgate.scss
+++ b/css/projects/bishopgate.scss
@@ -2,72 +2,61 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
-.bishop-section1 {
-    .bishop-subsection1 {
+.columns {
+    display: flex;
+    .left-column-text {
+        width: 50%;       
         display: flex;
-        .bishop-subsection1-column1 {
-            width: 50%;
+        flex-flow: column;
+        justify-content: center;
+        ._95-percent {
+            width: 95%;
         }
-        .bishop-subsection1-column2 {
-            width: 50%;
-            padding-left: 5%;
+        ._70-percent {
+            width: 70%;
         }
     }
-    .bishop-section1-images {
-        position: relative;
-        .bishop-dark-future-img {
-            position: absolute;
-            width: 45%;
-            bottom: 50%;
-        }
+    .left-column-img {
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+    .right-column-text {
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        padding-left: 10px;
+    }
+    .right-column-img{
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: space-evenly;
+    }
+}
+.bishop-section1-images {
+    position: relative;
+    .bishop-dark-future-img {
+        position: absolute;
+        width: 45%;
+        bottom: 50%;
+    }
+}
+.section2-header-images {
+    position: relative;
+    .section2-header-image2{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 40%;
     }
 }
 
-.bishop-section2 {
-    .section2-header-images {
-        position: relative;
 
-        .section2-header-image2{
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 40%;
-        }
-    }
-    .bishop-section2-part1 {
-        padding-top: 50px;
-        display: flex;
-        .bishop-section2-part1-column1{
-            width: 50%;
-            display: flex;
-            flex-flow: column;
-            justify-content: center;
-            p {
-                width: 70%;
-            }
-        }
-        .bishop-section2-part1-column2{
-            width: 50%;
-            display: flex;
-            flex-flow: column;
-            justify-content: space-evenly;
-        }
-    }
-    .bishop-section2-part2 {
-        display: flex;
-        .bishop-section2-part2-column1{
-            display: flex;
-            width: 50%;
-        }
-        .bishop-section2-part2-column2{
-            width: 50%;
-            display: flex;
-            flex-flow: column;
-            justify-content: center;
-            padding-left: 10px;
-        }
-    }
-}
+
 .bishop-section3 {
     position: relative;
     .section3-pre-image {
