Fixed 3D Modeling img size

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -140,6 +140,9 @@ header{
     flex-flow: row wrap;
     justify-content: space-around;
 }
+.img-img {
+    max-height: 214px;
+}
 .tile-container{
   padding: 1em;
   text-decoration: none;
